--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </div>
             </div>
             <div class="control">
-              <button class="button is-primary">Send your message</button>
+              <button type="submit" class="button is-primary">Send your message</button>
             </div>
           </form>
         </div>
